[package]
name = "aerobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
#serde = { version = "1.0", features = ["derive"] }
#chrono = "0.4"
#toml = "0.4.2"
#firestore = "0.11"
#async-trait = "0.1.57"
#eventual = "0.1.7"
#websocket = "0.24.0"
#reqwest = { version = "0.11", features = ["json", "stream"] }
#futures = { version = "0.3", default_features = false }
#serde_json = "1.0.91"
poise = "0.5.2"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]
